--- a/src/main/webapp/assets/style/main.less
+++ b/src/main/webapp/assets/style/main.less
@@ -1,3 +1,3 @@
-main, header, footer {
-  display: block;
-}
+@import "include/variables.import.less";
+@import "include/global.import.less";
+@import "include/articles.import.less";
