compile jade into .tmp dir

--- a/dionysus-client/yo/app/includes/layout/footer.import.jade
+++ b/dionysus-client/yo/app/includes/layout/footer.import.jade
@@ -1,4 +1,3 @@
 .footer-copyright
-  .container
-    &copy; 2015 XXXX Company
+  .container &copy; 2015 XXXX Company
     a.grey-text.text-lighten-4.right(href="#") More Links
