change base color

--- a/dionysus-client/yo/app/includes/layout/header.import.jade
+++ b/dionysus-client/yo/app/includes/layout/header.import.jade
@@ -1,5 +1,5 @@
-nav.orange
-  div.nav-wrapper
+nav
+  .nav-wrapper
     a.brand-logo(href="#") DIONYSUS
     ul.right.hide-on-med-and-down
       li
