--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -22,7 +22,7 @@ html(class="no-js")
   body
     header
     main
-    footer.page-footer.orange
+    footer.page-footer
   
   include ./includes/layout/layout
   include ./includes/articles/article
