--- a/dionysus-client/yo/app/includes/layout.jade
+++ b/dionysus-client/yo/app/includes/layout.jade
@@ -9,7 +9,23 @@ script#header-template(type="text/html")
           a(href="#") Questions
 
 script#main-template(type="text/html")
-  .row
+  .slider
+    ul.slides
+      li
+        img(src="https://unsplash.imgix.net/photo-1414924347000-9823c338079b?q=75&fm=jpg&s=0fa6db3cdc65e50c111575043fad4b5c")
+        .caption.center-align
+          h3 This is big tagline
+          h5.light.grey-text.text-lighten-3 Here is our small slogan.
+      li
+        img(src="https://ununsplash.imgix.net/photo-1414849424631-8b18529a81ca?q=75&fm=jpg&s=0e993004a2f3704e8f2ad5469315ccb7")
+        .caption.left-align
+          h3 Left Aligned Caption
+          h5.light.grey-text.text-lighten-3 Here is our small slogan.
+      li
+        img(src="https://ununsplash.imgix.net/uploads/1413259835094dcdeb9d3/6e609595?q=75&fm=jpg&s=6a4fc66161293fc4a43a6ca6f073d1c5")
+        .caption.right-align
+          h3 Left Aligned Caption
+          h5.light.grey-text.text-lighten-3 Here is our small slogan.
 
 script#footer-template(type="text/html")
   .footer-copyright
