--- a/dionysus-client/yo/app/includes/layout.jade
+++ b/dionysus-client/yo/app/includes/layout.jade
@@ -12,20 +12,20 @@ script#main-template(type="text/html")
   .slider
     ul.slides
       li
-        img(src="https://unsplash.imgix.net/photo-1414924347000-9823c338079b?q=75&fm=jpg&s=0fa6db3cdc65e50c111575043fad4b5c")
+        img(src="images/slide-1.jpeg")
         .caption.center-align
-          h3 This is big tagline
-          h5.light.grey-text.text-lighten-3 Here is our small slogan.
+          h3 机构介绍
+          h5.light.grey-text.text-lighten-3 机构介绍小标题
       li
-        img(src="https://ununsplash.imgix.net/photo-1414849424631-8b18529a81ca?q=75&fm=jpg&s=0e993004a2f3704e8f2ad5469315ccb7")
+        img(src="images/slide-2.jpeg")
         .caption.left-align
-          h3 Left Aligned Caption
-          h5.light.grey-text.text-lighten-3 Here is our small slogan.
+          h3 汇心网
+          h5.light.grey-text.text-lighten-3 汇心网小标题
       li
-        img(src="https://ununsplash.imgix.net/uploads/1413259835094dcdeb9d3/6e609595?q=75&fm=jpg&s=6a4fc66161293fc4a43a6ca6f073d1c5")
+        img(src="images/slide-3.jpeg")
         .caption.right-align
-          h3 Left Aligned Caption
-          h5.light.grey-text.text-lighten-3 Here is our small slogan.
+          h3 学校
+          h5.light.grey-text.text-lighten-3 学校小标题
 
 script#footer-template(type="text/html")
   .footer-copyright
