add home page data

--- a/dionysus-client/yo/app/includes/layout.jade
+++ b/dionysus-client/yo/app/includes/layout.jade
@@ -9,7 +9,7 @@ script#header-template(type="text/html")
           a(href="#") Questions
 
 script#main-template(type="text/html")
-  .slider
+  .slider.fullscreen
     ul.slides
       li
         img(src="images/slide-1.jpeg")
