--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -44,6 +44,7 @@ html(class="no-js")
   <!-- build:js({app,.tmp}) scripts/app.js -->  
   script(src="scripts/root.js")
   script(src="scripts/main.js")
+  script(src="scripts/home.js")
   script(src="scripts/header.js")
   script(src="scripts/footer.js")
   script(src="scripts/articles/article.js")
