--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -41,14 +41,12 @@ html(class="no-js")
   <!-- endbower -->
   <!-- endbuild -->
 
-  <!-- build:js({app,.tmp}) scripts/app.js -->  
-  script(src="scripts/root.js")
-  script(src="scripts/main.js")
-  script(src="scripts/home.js")
-  script(src="scripts/header.js")
-  script(src="scripts/footer.js")
-  script(src="scripts/articles/article.js")
-  script(src="scripts/articles/category.js")
+  <!-- build:js({app,.tmp}) scripts/app.js -->
+  script
+    | var Dionysus = new Marionette.Application();
+  script(src="scripts/modules/home.js")
+  script(src="scripts/modules/article.js")
+  script(src="scripts/modules/category.js")
   script(src="scripts/app.js")
 
   <!-- endbuild -->
