--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -20,9 +20,8 @@ html(class="no-js")
     <!-- endbuild -->
     title Dionysus
   body
-    header
-    main
-    footer.page-footer
+    header#header
+    main#main
 
   include ./includes/layout
   include ./includes/articles
@@ -43,8 +42,7 @@ html(class="no-js")
 
   <!-- build:js({app,.tmp}) scripts/app.js -->
   script
-    | var Dionysus = new Marionette.Application();
-  script(src="scripts/modules/home.js")
+    | Dionysus = new Marionette.Application();
   script(src="scripts/modules/article.js")
   script(src="scripts/modules/category.js")
   script(src="scripts/app.js")
