split slider into seperate files

--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -24,6 +24,7 @@ html(class="no-js")
     main#main
 
   include ./includes/layout
+  include ./includes/sliders
   include ./includes/articles
 
   <!-- build:js(.) scripts/vendor.js -->
