split home page

--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -44,6 +44,7 @@ html(class="no-js")
   <!-- build:js({app,.tmp}) scripts/app.js -->
   script
     | Dionysus = new Marionette.Application();
+  script(src="scripts/modules/home.js")
   script(src="scripts/modules/article.js")
   script(src="scripts/modules/category.js")
   script(src="scripts/app.js")
