--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -5,9 +5,9 @@ html(class="no-js")
     meta(name="description" content="")
     meta(name="viewport" content="width=device-width")
     link(rel="shortcut icon" href="/favicon.ico")
-    // build:css(.) styles/vendor.css
+    // build:css(.) /styles/vendor.css
     // bower:css
-    link(rel='stylesheet', href='bower_components/materialize/bin/materialize.css')
+    link(rel='stylesheet', href='/bower_components/materialize/bin/materialize.css')
     // endbower
     // endbuild
 
