--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -2,18 +2,15 @@ doctype html
 html(class="no-js")
   head
     meta(charset="utf-8")
-    meta(name="description" content="")
-    meta(name="viewport" content="width=device-width")
-    link(rel="shortcut icon" href="/favicon.ico")
+    meta(name="description",  content="")
+    meta(name="viewport",     content="width=device-width")
+    link(rel="shortcut icon", href="/favicon.ico")
 
     // build:css(.tmp) /styles/main.css
     link(rel="stylesheet", href="/bower_components/materialize/bin/materialize.css")
-    link(rel="stylesheet" href="/styles/main.css")
+    link(rel="stylesheet", href="/styles/main.css")
     // endbuild
 
-    // build:js /scripts/modernizr.js
-    script(src="/bower_components/modernizr/modernizr.js")
-    // endbuild
     title Dionysus
   body
     header#header
