--- a/dionysus-client/yo/app/includes/sliders.jade
+++ b/dionysus-client/yo/app/includes/sliders.jade
@@ -2,7 +2,7 @@ script#slide-template(type="text/template")
   | <img src="<%= image %>">
   .caption.center-align
     h3 <%= title %>
-    h5 <%= subTitle %>
+    h5 <%= subtitle %>
 
 script#slides-template(type="text/template")
   ul.slides
