adapt small screen devices

--- a/dionysus-client/yo/app/includes/home.jade
+++ b/dionysus-client/yo/app/includes/home.jade
@@ -16,4 +16,4 @@ script#module-tpl(type="text/template")
       p <%= body %>
 
 script#modules-tpl(type="text/template")
-  div
+  .container.disable-container-on-small
