--- a/dionysus-client/yo/app/styles/main.less
+++ b/dionysus-client/yo/app/styles/main.less
@@ -5,3 +5,10 @@ main {
 nav .brand-logo {
   margin: 0 1rem;
 }
+
+@media only screen and (max-width : 1025px) {
+  .disable-container-on-small.container {
+    padding: 0;
+    width: auto;
+  }
+}
