--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -13,7 +13,7 @@ html(class="no-js")
 
     title Dionysus
   body
-    header#header
+    header#header.navbar-fixed
     main#main
 
   include ./includes/templates
