use button instead of link in card

--- a/dionysus-client/yo/app/includes/header.jade
+++ b/dionysus-client/yo/app/includes/header.jade
@@ -1,4 +1,4 @@
-script#header-template(type="text/template")
+script#header-tpl(type="text/template")
   .nav-wrapper
     a.brand-logo(href="#") Dionysus
     ul.right.hide-on-med-and-down
