--- a/dionysus-client/yo/app/styles/main.less
+++ b/dionysus-client/yo/app/styles/main.less
@@ -8,3 +8,13 @@ main {
     width: auto;
   }
 }
+
+.dionysus-card-action {
+  &.card-action {
+    padding: 1rem;
+  }
+  a.btn {
+    margin: 0;
+    color: white;
+  }
+}
