--- a/dionysus-client/yo/app/includes/home.jade
+++ b/dionysus-client/yo/app/includes/home.jade
@@ -7,8 +7,10 @@ script#module-tpl(type="text/template")
       p.activator.grey-text.text-darken-4 
         <%= subtitle %>
         i.mdi-navigation-more-vert.right
-    .card-action
-      | <a class="right" href="<%= href %>">Link</a>
+    .card-action.dionysus-card-action
+      a.right.waves-effect.btn(href!="<%= href %>")
+        | Enter
+        i.mdi-content-send.right
     .card-reveal
       span.card-title.grey-text.text-darken-4
         <%= title %>
