--- a/dionysus-client/yo/app/includes/home.jade
+++ b/dionysus-client/yo/app/includes/home.jade
@@ -8,7 +8,7 @@ script#module-tpl(type="text/template")
         <%= subtitle %>
         i.mdi-navigation-more-vert.right
     .card-action.dionysus-card-action
-      a.right.waves-effect.btn(href!="<%= href %>")
+      a.right.waves-effect.waves-light.btn(href!="<%= href %>")
         | Enter
         i.mdi-content-send.right
     .card-reveal
