fix layout doesn't work well on mobile

--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -13,10 +13,7 @@ html(class="no-js")
 
     title Dionysus
   body
-    header#header.navbar-fixed
-    main#main
-
-  include ./includes/templates
+    include ./jade/layout
 
   // build:js(.) /scripts/vendor.js
   script(src="/bower_components/jquery/dist/jquery.js")
