--- a/dionysus-client/yo/app/jade/templates/articles.jade
+++ b/dionysus-client/yo/app/jade/templates/articles.jade
@@ -1,3 +1,6 @@
 script#article-tpl(type="text/template")
   h3 <%= title %>
   p <%= body %>
+
+script#articles-tpl(type="text/template")
+  ul.collection
