--- a/dionysus-client/yo/app/jade/templates/home.jade
+++ b/dionysus-client/yo/app/jade/templates/home.jade
@@ -18,4 +18,4 @@ script#module-tpl(type="text/template")
       p <%= body %>
 
 script#modules-tpl(type="text/template")
-  .container.disable-container-on-small
+  .container.dionysus-container
