--- a/dionysus-client/yo/app/styles/main.less
+++ b/dionysus-client/yo/app/styles/main.less
@@ -3,7 +3,7 @@ main {
 }
 
 @media only screen and (max-width : 1025px) {
-  .disable-container-on-small.container {
+  .dionysus-container.container {
     padding: 0;
     width: auto;
   }
