--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -33,6 +33,7 @@ html(class="no-js")
   script(src="/scripts/app.js")
   script(src="/scripts/modules/home.js")
   script(src="/scripts/modules/about.js")
+  script(src="/scripts/modules/account.js")
   script(src="/scripts/modules/article.js")
   script(src="/scripts/modules/category.js")
   script(src="/scripts/boot.js")
