--- a/dionysus-client/yo/app/jade/layout.jade
+++ b/dionysus-client/yo/app/jade/layout.jade
@@ -1,7 +1,9 @@
 header#header
 main#main
+#dialog.dionysus
 
 include ./templates/header
 include ./templates/home
 include ./templates/articles
 include ./templates/about
+include ./templates/account
