--- a/dionysus-client/yo/app/styles/main.less
+++ b/dionysus-client/yo/app/styles/main.less
@@ -3,13 +3,16 @@ main {
 }
 
 @media only screen and (max-width : 1025px) {
-  .dionysus-container.container {
+  .dionysus.container {
     padding: 0;
     width: auto;
   }
+  .dionysus .modal {
+    width: 90%;
+  }
 }
 
-.dionysus-card-action {
+.dionysus {
   &.card-action {
     padding: 1rem;
   }
