--- a/dionysus-client/yo/app/jade/templates/header.jade
+++ b/dionysus-client/yo/app/jade/templates/header.jade
@@ -1,6 +1,6 @@
 script#header-tpl(type="text/template")
   .nav-wrapper
-    a.brand-logo(href="#") Dionysus
+    a.brand-logo(href="/") Dionysus
     ul.right.hide-on-med-and-down
       li
         a(href="/app/login") Login
