seperate customized css style

--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -12,7 +12,7 @@ html(class="no-js")
     // endbuild
 
     title Dionysus
-  body
+  body.dionysus
     include ./jade/layout
 
   // build:js(.) /scripts/vendor.js
