--- a/dionysus-client/yo/app/jade/templates/home.jade
+++ b/dionysus-client/yo/app/jade/templates/home.jade
@@ -7,7 +7,7 @@ script#module-tpl(type="text/template")
       p.activator.grey-text.text-darken-4 
         <%= subtitle %>
         i.mdi-navigation-more-vert.right
-    .card-action.dionysus
+    .card-action
       a.right.waves-effect.waves-light.btn(href!="<%= href %>")
         | Enter
         i.mdi-content-send.right
@@ -18,4 +18,4 @@ script#module-tpl(type="text/template")
       p <%= body %>
 
 script#modules-tpl(type="text/template")
-  .container.dionysus
+  .container
