--- a/dionysus-client/yo/app/styles/main.less
+++ b/dionysus-client/yo/app/styles/main.less
@@ -14,6 +14,10 @@ main {
   }
 }
 
+.dionysus nav .brand-logo {
+  padding: 0 1rem;
+}
+
 .dionysus .card {
   a.btn {
     transition-property: all;
