add page footer

--- a/dionysus-client/yo/app/jade/layout.jade
+++ b/dionysus-client/yo/app/jade/layout.jade
@@ -1,8 +1,10 @@
 header#header
 main#main
+footer#footer.page-footer
 #dialog.dionysus
 
 include ./templates/header
+include ./templates/footer
 include ./templates/home
 include ./templates/articles
 include ./templates/about
