--- a/dionysus-client/yo/app/styles/main.less
+++ b/dionysus-client/yo/app/styles/main.less
@@ -1,5 +1,10 @@
 main {
   display: block;
+  min-height: 500px;
+}
+
+article {
+  padding: 1rem;
 }
 
 @media only screen and (max-width : 1025px) {
