make style customization locally

--- a/dionysus-client/yo/app/jade/layout.jade
+++ b/dionysus-client/yo/app/jade/layout.jade
@@ -1,7 +1,7 @@
 header#header
 main#main
 footer#footer.page-footer
-#dialog.dionysus
+#dialog
 
 include ./templates/header
 include ./templates/footer
