--- a/dionysus-client/yo/app/styles/main.less
+++ b/dionysus-client/yo/app/styles/main.less
@@ -8,11 +8,13 @@ article {
 }
 
 @media only screen and (max-width : 1025px) {
-  .dionysus {
+  .dionysus main {
     .container {
       padding: 0;
       width: auto;
-    }
+    } 
+  }
+  .dionysus #dialog {
     .modal {
       width: 90%;
     } 
@@ -23,10 +25,12 @@ article {
   padding: 0 1rem;
 }
 
-.dionysus .card {
-  a.btn {
-    transition-property: all;
-    margin: 0;
-    color: white;
+.dionysus main {
+  .card {
+    a.btn {
+      transition-property: all;
+      margin: 0;
+      color: white;
+    }
   }
 }
