--- a/dionysus-client/yo/app/jade/templates/tests.jade
+++ b/dionysus-client/yo/app/jade/templates/tests.jade
@@ -1,11 +1,14 @@
 script#test-detail-tpl(type="text/template")
   //- test name and description
   header
-    h5 <%= name %>
-    h3 <%= description %>
+    h5 <%= test.title %>
+    h3 <%= test.description %>
   //- item description and options
-  item
-    h2 <%= item-description %>
-      each option in <%= options %>
-        label <%= option-description %>
-          input(type="radio")
+  .item
+    <% var sequence = test.current; var item = test.items[sequence]; %>
+    h2 <%= item.description %>
+    <% _.each(item.options,function(option) { %>
+    |<label> <input type="radio"/> <%= option.description %> </label>
+    <% }); %>
+  a#previous.waves-effect.waves-light.btn 上一题
+  a#next.waves-effect.waves-light.btn 下一题
