add test.js file to show tests.jade template

--- a/dionysus-client/yo/app/jade/templates/tests.jade
+++ b/dionysus-client/yo/app/jade/templates/tests.jade
@@ -1,22 +1,27 @@
 script#test-detail-tpl(type="text/template")
   //- test name and description
-  header
+  #test-header
     h5 <%= title %>
     h3 <%= description %>
   //- item description and options
-  .item
-    <% var sequence = test.current; var item = test.items[sequence]; %>
-    h2 <%= item.description %>
-    <% _.each(item.options,function(option) { %>
-    |<label> <input type="radio"/> <%= option.description %> </label>
-    <% }); %>
-  a#previous.waves-effect.waves-light.btn 上一题
-  a#next.waves-effect.waves-light.btn 下一题
+  #test-item
+  a.previous.waves-effect.waves-light.btn 上一题
+  a.next.waves-effect.waves-light.btn 下一题
 
 script#test-general-tpl(type="text/template")
   //- test name and description
   header
-    h5 <%= test.title %>
-    image <%= test.image>
-    h3 <%= test.description %>
+    h5 <%= title %>
+    image <%= image>
+    h3 <%= description %>
   button.btn.waves-effect.waves-light 开始测试
+
+script#test-item-tpl(type="text/template")
+  span
+    |<%= sequence %>
+    |<%= description %>
+  #item-options
+
+script#test-item-option-tpl(type="text/template")
+  input(type="radio")
+  label <%= description %>
