minimize multiple html pages

--- a/dionysus-client/yo/app/admin.jade
+++ b/dionysus-client/yo/app/admin.jade
@@ -6,7 +6,7 @@ html(class="no-js")
     meta(name="viewport",     content="width=device-width")
     link(rel="shortcut icon", href="/favicon.ico")
 
-    // build:css({.,.tmp}) /styles/main.css
+    // build:css({.,.tmp}) /styles/admin/main.css
     link(rel="stylesheet", href="/bower_components/materialize/bin/materialize.css")
     link(rel="stylesheet", href="/bower_components/froala/css/font-awesome.css")
     link(rel="stylesheet", href="/bower_components/froala/css/froala_editor.css")
