--- a/dionysus-client/yo/app/admin.jade
+++ b/dionysus-client/yo/app/admin.jade
@@ -6,7 +6,7 @@ html(class="no-js")
     meta(name="viewport",     content="width=device-width")
     link(rel="shortcut icon", href="/favicon.ico")
 
-    // build:css({.,.tmp}) /styles/admin/main.css
+    // build:css({.,.tmp}) /styles/admin.css
     link(rel="stylesheet", href="/bower_components/materialize/bin/materialize.css")
     link(rel="stylesheet", href="/bower_components/froala/css/font-awesome.css")
     link(rel="stylesheet", href="/bower_components/froala/css/froala_editor.css")
@@ -18,7 +18,7 @@ html(class="no-js")
 
   include ./jade/_library
 
-  // build:js /scripts/froala_editor.js
+  // build:js(.) /scripts/admin/froala_editor.js
   script(src="/bower_components/froala/js/froala_editor.min.js")
   script(src="/bower_components/froala/js/langs/zh_cn.js")
   // endbuild
