--- a/dionysus-client/yo/app/admin.jade
+++ b/dionysus-client/yo/app/admin.jade
@@ -27,5 +27,5 @@ html(class="no-js")
   script(src="/scripts/app.js")
   script(src="/scripts/admin/admin.js")
   script(src="/scripts/admin/articles.js")
-  script(src="/scripts/boot.js")
+  script(src="/scripts/admin/boot.js")
   // endbuild
