--- a/dionysus-client/yo/app/jade/admin-layout.jade
+++ b/dionysus-client/yo/app/jade/admin-layout.jade
@@ -2,7 +2,7 @@ header#header
 main#main
 #dialog
 
-include ./templates/header
-include ./templates/footer
+include ./admin/header
 include ./admin/home
+include ./admin/categories
 include ./admin/articles
