--- a/dionysus-client/yo/app/admin.jade
+++ b/dionysus-client/yo/app/admin.jade
@@ -28,5 +28,6 @@ html(class="no-js")
   script(src="/scripts/admin/admin.js")
   script(src="/scripts/admin/articles.js")
   script(src="/scripts/admin/category.js")
+  script(src="/scripts/admin/tests.js")
   script(src="/scripts/admin/boot.js")
   // endbuild
