--- a/dionysus-client/yo/app/jade/admin/header.jade
+++ b/dionysus-client/yo/app/jade/admin/header.jade
@@ -5,4 +5,6 @@ script#admin-header-tpl(type="text/template")
         a(href="/admin/articles") Articles
       li
         a(href="/admin/categories") Categories
+      li
+        a(href="/admin/tests") Tests
 
