--- a/dionysus-client/yo/app/jade/admin/articles.jade
+++ b/dionysus-client/yo/app/jade/admin/articles.jade
@@ -1,15 +1,24 @@
 script#admin-article-tpl(type="text/template")
-  h5 
-    a(href!="/admin/articles/<%= id %>") <%= title %>
-  p <%= summary %>
+  a(href!="/admin/articles/<%= id %>") <%= title %>
+  a.secondary-content(href="#!")
+    i.mdi-action-highlight-remove
 
 script#admin-articles-tpl(type="text/template")
   ul.collection
-  .fixed-action-btn(style='bottom: 45px; right: 24px;')
+  .fixed-action-btn.admin-editor
     a.btn-floating.btn-large.red(href="/admin/articles/create")
       i.large.mdi-content-add
 
 script#admin-article-detail-tpl(type="text/template")
+  .container
+    h4 <%=title%>
+    p <%= summary%>
+    p <%= body %>
+  .fixed-action-btn.admin-editor
+    a.btn-floating.btn-large.red(href!="/admin/articles/<%=id%>/edit")
+      i.large.mdi-editor-mode-edit
+
+script#admin-article-detail-edit-tpl(type="text/template")
   .container
     form.col.s12(action="#")
       .row
@@ -31,10 +40,10 @@ script#admin-article-detail-tpl(type="text/template")
       .row
         .input-field.col.s12
           textarea#body.materialize-textarea.editor <%= body %>
-      .row
-        .input-field.col.s12
-          button.btn.waves-effect.waves-light.right(name="save") Save
-            i.mdi-content-send.right
+
+  .fixed-action-btn.admin-editor
+    a.btn-floating.btn-large.red(href!="/admin/articles/<%=id%>")
+      i.large.mdi-content-save
 
 script#admin-article-create-tpl(type="text/template")
   .container
