update article editor style

--- a/dionysus-client/yo/app/jade/admin/articles.jade
+++ b/dionysus-client/yo/app/jade/admin/articles.jade
@@ -44,6 +44,10 @@ script#admin-article-detail-edit-tpl(type="text/template")
   .fixed-action-btn.admin-editor
     a.btn-floating.btn-large.red(href!="/admin/articles/<%=id%>")
       i.large.mdi-content-save
+    ul
+      li
+        a.btn-floating.blue
+          i.mdi-editor-publish
 
 script#admin-article-create-tpl(type="text/template")
   .container
