--- a/dionysus-client/yo/app/styles/main.less
+++ b/dionysus-client/yo/app/styles/main.less
@@ -40,6 +40,14 @@ article {
   .admin-editor {
     top: 20px; 
     right: 10%;
+
+    ul {
+      right: clac(10% - 28px);
+      top: 80px;
+    }
+  }
+  .froala-view {
+    min-height: 100px;
   }
 }
 
