--- a/dionysus-client/yo/app/jade/_library.jade
+++ b/dionysus-client/yo/app/jade/_library.jade
@@ -6,6 +6,7 @@ script(src="/bower_components/backbone.babysitter/lib/backbone.babysitter.js")
 script(src="/bower_components/backbone.wreqr/lib/backbone.wreqr.js")
 script(src="/bower_components/backbone.intercept/dist/backbone.intercept.js")
 script(src="/bower_components/marionette/lib/core/backbone.marionette.js")
+script(src="/bower_components/semantic-ui/dist/csemantic.js")
 script(src="/bower_components/sockjs/sockjs.js")
 script(src="/bower_components/stomp-websocket/lib/stomp.min.js")
 // endbuild
