--- a/dionysus-client/yo/app/jade/templates/articles.jade
+++ b/dionysus-client/yo/app/jade/templates/articles.jade
@@ -1,10 +1,11 @@
-script#article-tpl(type="text/template")
-  h5 
-    a(href!="/app/articles/<%= id %>") <%= title %>
-  p <%= summary %>
-
 script#articles-tpl(type="text/template")
-  ul.collection
+  ul.ui.list
+
+script#article-tpl(type="text/template")
+  .content
+    h5.header 
+      a(href!="/app/articles/<%= id %>") <%= title %>
+    p.description <%= summary %>
 
 script#article-detail-tpl(type="text/template")
   header
