--- a/dionysus-client/yo/app/jade/admin/header.jade
+++ b/dionysus-client/yo/app/jade/admin/header.jade
@@ -2,7 +2,13 @@ script#admin-header-tpl(type="text/template")
   a.active.item(href="/admin")
     i.home.icon 
     | Home
-  a.item(href="/admin/articles") Articles
-  a.item(href="/admin/categories") Categories
-  a.item(href="/admin/tests") Test
+  a.item(href="/admin/articles") 
+    i.edit.icon
+    | Articles
+  a.item(href="/admin/categories")
+    i.inbox.icon
+    | Categories
+  a.item(href="/admin/tests") 
+    i.lab.icon
+    | Test
 
