apply page style

--- a/dionysus-client/yo/app/jade/templates/home.jade
+++ b/dionysus-client/yo/app/jade/templates/home.jade
@@ -8,4 +8,4 @@ script#module-tpl(type="text/template")
       .description <%= body %>
 
 script#modules-tpl(type="text/template")
-  .ui.three.column.grid
+  .ui.three.column.grid.cards
