--- a/dionysus-client/yo/app/jade/templates/header.jade
+++ b/dionysus-client/yo/app/jade/templates/header.jade
@@ -1,4 +1,7 @@
 script#header-tpl(type="text/template")
-  .nav-wrapper
-    a.brand-logo(href="/") Dionysus
+  a.active.item(href="/")
+    i.home.icon 
+    | Home
+  .right.menu
+    a.item(href="/app/login") Login
 
