--- a/dionysus-client/yo/app/jade/templates/account.jade
+++ b/dionysus-client/yo/app/jade/templates/account.jade
@@ -1,31 +1,37 @@
 script#account-login-tpl(type="text/template")
-  h4.ui.dividing.header Login
-  .field
-    label Username
-    input(type="text", placeholder="Username")
-  .field
-    label Password
-    input(type="password", placeholder="Password")
-  .field
-    span
-      | Do not have account 
-      a(href="/app/register") register
-  button.ui.submit.button Submit
+  .ui.compact.segment
+    .required.field
+      label Username
+      .ui.left.icon.input
+        input(type="text", placeholder="Username")
+        i.user.icon
+    .required.field
+      label Password
+      .ui.left.icon.input
+        input(type="password", placeholder="Password")
+        i.lock.icon
+    .ui.horizontal.divider OR
+    .field
+      span
+        | Do not have account 
+        a(href="/app/register") register
+    button.ui.submit.button Submit
 
 script#account-register-tpl(type="text/template")
-  h4.ui.dividing.header Register
-  .field
-    label Username
-    input(type="text", placeholder="Username")
-  .field
-    label Password
-    input(type="password", placeholder="Password")
-  .field
-    label Password1
-    input(type="password", placeholder="Retype password")
-  .field
-    span
-      | Alreay have account 
-      a(href="/app/login") login
-  button.ui.submit.button Submit
+  .ui.compact.segment
+    .required.field
+      label Username
+      input(type="text", placeholder="Username")
+    .required.field
+      label Password
+      input(type="password", placeholder="Password")
+    .required.field
+      label Retype Password
+      input(type="password", placeholder="Retype password")
+    .ui.horizontal.divider OR
+    .field
+      span
+        | Alreay have account 
+        a(href="/app/login") login
+    button.ui.submit.button Submit
 
